2023-10-24  Charlie Zender  <zender@uci.edu>

	* Replace "stop" with "error stop" in *.F90 programs so program	returns non-zero exit status

2023-10-20  Charlie Zender  <zender@uci.edu>

	* Add swn_rrtmgp_bnd5.nco, swn_prf.sh to simulate/diagnose VIS+NIR components of RRTMG Band 5

2023-10-17  Charlie Zender  <zender@uci.edu>

	* Update to gfortran-13 on Homebrew

	* Add --rfm, --afgl long-options for clarity

2023-05-19  Charlie Zender  <zender@uci.edu>

	* Fix output for all these variables by initializing them to 0.0 before use (doh!)

	* Comment-out netCDF put_var lines these variables that now cause IEEE errors on MacOS due to new compilers/netCDF:
	lmn_spc_aa_sfc, ntn_spc_aa_sfc, odac_spc_mpr, odxc_spc_mpr, odxc_spc_ttl, trn_spc_atm_mpr, lmn_spc_aa_ndr_sfc

2021-10-05  Charlie Zender  <zender@uci.edu>

	* Verify that swnb2 still works on LGGE snowpack profiles, once	profiles are regenerated to include newer constituents (CO, etc.)

2019-07-09  Charlie Zender  <zender@uci.edu>

	* Write npc_O2O2 as nf90_double not nf90_float to avoid overflow

2018-12-19  Charlie Zender  <zender@uci.edu>

	* Implement set_warm and set_cold options to bypass temperature	slope method

2018-12-17  Charlie Zender  <zender@uci.edu>

	* Read-in massaged data of eight segments. Data are unreliable in UV/Vis. GOB90 looks better there.

	* Utilize abs_xsx and deprecate odal_O2O2_PUNC_O2_PUNP_O2

2018-12-10  Charlie Zender  <zender@uci.edu>

	* Merge GOB90 and HTR16 data processing for O2X

	* Eliminate use of k_O2_O2 equilibrium coefficient to scale cross-sections

2018-12-02  Charlie Zender  <zender@uci.edu>

	* Updating O2X.F90 to read CIA files

2018-11-30  Charlie Zender  <zender@uci.edu>

	* Initialize srt_one(1)=1 in abs_xsx_get() and mlk_prm_get()

2018-10-28  Charlie Zender  <zender@uci.edu>

	* Change swnb2, O3.F90, and O2.F90 to use abs_xsx_get() access mechanism for O3 and O2

2018-10-23  Charlie Zender  <zender@uci.edu>

	* ACA 2.4.0 release procedure: