@@ -9522,6 +9522,21 @@ annote = {clm rt pft alb rfl}
   csznote = 	 {prp_esm cice}
 }
 
+@article {JHC21,
+      author = "Xianwen Jing and Xianglei Huang and Xiuhong Chen and Dong L. Wu and Peter Pilewskie and Odele Coddington and Erik Richard",
+      title = "Direct Influence of Solar Spectral Irradiance on the High-Latitude Surface Climate",
+      journal = "Journal of Climate",
+      year = "2021",
+      publisher = "American Meteorological Society",
+      address = "Boston MA, USA",
+      volume = "34",
+      number = "10",
+      doi = "10.1175/JCLI-D-20-0743.1",
+      pages=      "4145 - 4158",
+      url = "https://journals.ametsoc.org/view/journals/clim/34/10/JCLI-D-20-0743.1.xml",
+      csznote = aca
+}
+
 @Article{CHF14,
   author = 	 {Xiuhong Chen and Xianglei Huang and Mark G. Flanner},
   title = 	 {Sensitivity of modeled {far-IR} radiation budgets in polar continents to treatments of snow surface and ice cloud radiative properties},
@@ -13561,6 +13576,19 @@ Markel, V. A. (2006), Erratum to "The effects of averaging on the enhancement fa
   Another reference is: Kurucz, R.L., Synthetic infrared spectra, in Infrared Solar Physics, IAU Symp. 154, edited by D.M. Rabin and J.T. Jefferies, Kluwer, Acad., Norwell, MA, 1992.
   See AER implementation at http://rtweb.aer.com/solar_frame.html},
   annote =	 {slr_cst slr_spc}
+}
+
+@Article{FDE24,
+AUTHOR = {Funke, B. and Dudok de Wit, T. and Ermolli, I. and Haberreiter, M. and Kinnison, D. and Marsh, D. and Nesse, H. and Sepp\"{a}l\"{a}, A. and Sinnhuber, M. and Usoskin, I.},
+TITLE = {Towards the definition of a solar forcing dataset for CMIP7},
+JOURNAL = {Geoscientific Model Development},
+VOLUME = {17},
+YEAR = {2024},
+NUMBER = {3},
+PAGES = {1217--1227},
+URL = {https://gmd.copernicus.org/articles/17/1217/2024/},
+DOI = {10.5194/gmd-17-1217-2024},
+  annote =	 {aca}
 }
 
 @Article{KyS92,
